AssistirVideo activity label, keep screen on while playing and completionControls icons fixed

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.AssistirVideo"></activity>
+        <activity
+            android:name=".activity.AssistirVideo"
+            android:label="Vídeo da Aula">
+        </activity>
         <activity
             android:name=".activity.Principal"
             android:label="@string/app_name">
