--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".activity.Quiz"
+            android:name=".activity.AulaQuiz"
             android:label="Quiz da Aula" />
         <activity
             android:name=".activity.ResultadoQuiz"
